--- a/practice-for-ch-js-browser-ttt-main/index.html
+++ b/practice-for-ch-js-browser-ttt-main/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" type="text/css" href="./ttt.css">
+    <link rel="stylesheet" type="text/css" href="./ttt.css" />
     <script src="./dist/main.js"></script>
   </head>
 
